--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.30.0",
     "clsx": "2.0.0",
+    "firebase": "^12.6.0",
     "framer-motion": "10.16.4",
     "lucide-react": "0.292.0",
     "react": "^18.2.0",
